@@ -52,6 +52,7 @@
 	* Added support for language dependant field values (through conditions) when indexing records using the Index Queue, resolves #30205, credits Michiel Roos
 	* Added support for language parameter when indexing records with Index Queue, resolves #31382, credits Michael Voehringer
 	* Fixed issue #28541: Catch block throws an exception due to wrong construction of replacement response on error
+	* Fixed error logging when indexing through Index Queue
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
